--- a/css/basis.css
+++ b/css/basis.css
@@ -1,10 +1,12 @@
+ 
+ /* Border-Box-Modell aktivieren */
  *, *::before, *::after { 
     box-sizing: border-box; 
 }  
 
 html {
     scroll-behavior: smooth;
-    background-color: #eee;
+    background-color: #f9f9f9;
     
     
     /* #0076ff;  */
@@ -22,7 +24,7 @@ body {
     font-size: 1rem; 
     min-width: 320px;
     max-width: 600px; 
-    background-color: white;
+    background-color: #f9f9f9;
     margin: 1rem auto; 
 }
 
@@ -33,13 +35,14 @@ h4 { font-size: 1.5rem; font-weight: 500;}
 h5 { font-size: 1.25rem; }
 h6 { font-size: 1rem; }
 
+/* Collapsing margin vermeiden */
 h1, h2, h3, h4, h5, h6, p, ul, ol {
     margin-top: 0; 
-}
+} 
 
-/* figure, blockquote {
+figure, blockquote {
     margin: 0; 
-} */
+}
 
 .visually-hidden {
     position: absolute !important;
@@ -54,3 +57,19 @@ h1, h2, h3, h4, h5, h6, p, ul, ol {
 }
 
 /* *{outline: 1px solid red; } */
+
+figure {
+    padding: 1rem; 
+    margin-bottom: 1rem;
+    /* Andre stiler for figure-elementet */
+}
+
+.image img {
+    max-width: 100%;
+    height: auto;
+    overflow: hidden;
+    
+}
+
+
+
