--- a/css/navi-flex.css
+++ b/css/navi-flex.css
@@ -4,7 +4,7 @@
 
   .site-nav { 
      background: 
-     #507DBC; 
+     #00a3d2; 
     color: white; 
     
     padding: 0 1rem; 
@@ -60,17 +60,18 @@
   /* Style the current link and various states */
   .site-nav a:hover, 
   .site-nav a:focus {
-    background-color: #2c4464;
+    background-color: #1e0043;
     color: white; 
   }
   .site-nav a.current {
-    background-color: #1b4d89;
+    background-color: #1e0043;
     color: white; 
-    /* text-decoration: underline; */
-    border-bottom:1px solid white; 
+    
+    /* text-decoration: underline;
+    border-bottom:1px solid pink;  */
   } 
   .site-nav a:active {
-    background-color: #2c4464;
+    background-color: #1e0043;
     color: white; 
   }
 
