--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,22 @@
 
 
 
-
+/* basic settings */
 @import url("basis.css");
+
 @import url("layout.css"); 
+
+/* @import url("layout-modern.css");  */
+
+
+/* Modul für eine responsive Inline-Navigation */
 @import url("navi-flex.css");
+
+
 @import url("content.css");
+
 @import url("contact.css"); 
+
 @import url("overview.css"); 
 
 
