--- a/css/layout.css
+++ b/css/layout.css
@@ -7,20 +7,21 @@
 
   */ 
 
-/* Padding for the header area */
-.site-header { padding: 1rem 1rem 0 1rem; }
+/* header area */
+/* .site-header { padding: 1rem 1rem 0 1rem; }
 
 /* Margin between logo and slogan */
 /* logo er tatt bort */
 .site-header h1 { margin-bottom: 0; }
-.site-header p  { margin-top: 0; }
+.site-header p  { margin-top: 0; } */
+
 
 
 
 /* Line height and margins for the content area <main> */
+
 .site-content { 
     line-height: 1.5; 
-
     padding: 0 1rem; 
     margin-bottom: 3rem; 
 }
@@ -31,6 +32,7 @@
   */ 
 
 /* Styling for the footer area (similar to site navigation) */
+
 .site-footer {
     background-color: #00a3d2;
     color: white; 
@@ -40,12 +42,14 @@
 }  
 
 /* "Back to top" link - font slightly smaller and aligned to the right */
+
 .site-footer {
     font-size: smaller;
     text-align: right;
 }
 
 /* Links in the footer (similar to site navigation) */
+
 .site-footer a {
     color: white; 
     text-decoration: none;
