--- a/css/basis.css
+++ b/css/basis.css
@@ -9,10 +9,18 @@
 html {
     --color-background-light: #f9f9f9; 
     --color-background-dark: #e9e9e9; 
+    --color-grey-border:#818889; 
+    --color-yellow: #fcd770; 
+    --color-icon-community:#e18a00;
+    --color-icon-finance: #a19dff;
+    --color-icon-task:#00a3d2;
+
+    --color-skincolour2:#fcd4b4; 
+    --color-purple-light:#ff33cc; 
 
     --color-font: #120800; 
     --color-nav: #00a3d2; 
-    --color-nav-dark: #007293; 
+    --color-nav-darker: #007293; 
 
     --color-shadow: 4px 8px  8px rgba(0, 0, 0, 0.2); 
 }
@@ -31,11 +39,7 @@ html { scroll-behavior: smooth; }
 /* Collapsing Margins vermeiden */ 
 h1, h2, h3, h4, h5, h6, p, ul, ol, blockquote { margin-top: 0; }
 
-/* Bilder und Videos mit flexibler Breite einbinden */ 
-img, video { max-width: 100%; height: auto; }
 
-/* figure ohne horizontale Außenabstände */
-figure { margin-left: 0; margin-right: 0; } 
 
 
 /**  
@@ -49,7 +53,18 @@ font-family: system-ui, -apple-system, "Segoe UI", Roboto,
 
 /* Definition der Standardschriftgröße (optional)  */
 font-size: 1rem; 
+max-width: 600px;
+line-height: 1.5; 
+padding:1rem; 
+margin: 0 auto; 
 }  
+@media screen and (min-width: 768px) {
+    html{ font-size: 1.125rem;}
+}
+@media screen and (min-width: 1280px) {
+  html{ font-size: 1.25rem;}
+}
+
 
 /* Überschriften - Schriftgröße und Strichstärke */ 
 h1 { font-size: 2.5rem; font-weight: 500; } 
@@ -62,8 +77,7 @@ h6 { font-size: 1rem; }
 /* Unterstreichung für Hyperlinks dünn und etwas weiter weg vom Text */ 
 a { text-decoration-thickness: 1px; text-underline-offset: 0.1875em; }
 
-/* Kontaktaddressen nicht kursiv */
-address { font-style: normal; }
+
 
 
 /**  
