--- a/css/content.css
+++ b/css/content.css
@@ -1,11 +1,3 @@
-/* 
-* 1. Content area (infobox) og updates
-*/
-
-
-
-
-
 
 /* Styling for infoboxes */
 .infoboxen {
@@ -52,56 +44,54 @@
 
 
 /* Oppdateringsoversikt Stiler */
-.update-overview {
-  background-color: var(--grey-very-light, whitesmoke); 
+.updateboxen {
+  background-color: var(--color-background-light); 
   padding: 1rem; 
   margin-bottom: 1rem; 
 }
 
-.update-overview > .updates-container {
+.updateboxen> .inside {
   display: grid; 
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 1rem; 
 }
 
-.update-overview > .updates-container > h2 {
+.updateboxen> ..inside > h2 {
   grid-column: 1/-1; 
 }
 
 /* Enkelt oppdateringselement */
-.update-tasks, .update-budget, .update-community {
+.updatebox {
   text-align: center; 
-  background-color: var(--grey-light, #eee);
-  color: var(--color-base-dark, black);
-  background-image: linear-gradient(to right, var(--grey-light, #eee), var(--grey-very-light, whitesmoke)); 
+  background-color: var(--color-background-dark);
+  color: var(--color-font);
+  background-image: linear-gradient(to right, var(#818889), var(--color-background-lightt, whitesmoke)); 
   box-shadow: 0 1px 3px var(--color-shadow); 
 
   padding: 1rem;
-  border-left: 5px solid var(--color-primary, #07b);
+  border-left: 5px solid var(--color-nav);
   margin: 0; 
   margin-bottom: 1rem;
 }
 
-.update-tasks p:first-child, .update-budget p:first-child, .update-community p:first-child { 
+.updatebox p:first-child { 
   font-size: 1.25rem; 
   font-weight: bold; 
 }
 
 /* Stil for listeelementer i oppdateringer, om nødvendig */
-.update-tasks ul, .update-budget ul, .update-community ul {
+.updatebox ul {
   padding-left: 20px; /* Justering for listeinnrykk */
 }
 
-/* Gjelder for skjermer bredere enn 600px */
+/* Gjelder for skjermer bredere enn 600px - endret updates container til inside - se på senere .... */
 @media screen and (min-width: 600px) {
-  .update-overview > .updates-container {
+  .updateboxen > .inside {
     display: grid; 
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 1rem; 
   }
 
-  .update-tasks, .update-budget, .update-community {
-    /* Tilpassinger for bredere skjermer her, om nødvendig */
-  }
+
 }
 
